tests/baselines/reference/comparisonOperatorWithIdenticalTypeParameter.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalTypeParameter.ts(2,14): error TS2365: Operator '<' cannot be applied to types 'T' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalTypeParameter.ts(3,14): error TS2365: Operator '>' cannot be applied to types 'T' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalTypeParameter.ts(4,14): error TS2365: Operator '<=' cannot be applied to types 'T' and 'T'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalTypeParameter.ts(5,14): error TS2365: Operator '>=' cannot be applied to types 'T' and 'T'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithIdenticalTypeParameter.ts (4 errors) ====
    function foo<T>(t: T) {
        var r1 = t < t;
                 ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'T' and 'T'.
        var r2 = t > t;
                 ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'T' and 'T'.
        var r3 = t <= t;
                 ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'T' and 'T'.
        var r4 = t >= t;
                 ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'T' and 'T'.
        var r5 = t == t;
        var r6 = t != t;
        var r7 = t === t;
        var r8 = t !== t;
    }